# confluent-cloud-chargeback-rebuild

./: .dockerignore  .env.example  .gitignore  GRAFANA_FIX.md  Makefile  README.md  pyproject.toml  validate_quick.py
config/: prometheus.yml
config/grafana/: dashboards.yml  datasources.yml
config/grafana/dashboards/: costs-overview.json  historical_costs.json
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: PROMQL_EXAMPLES.md  README_EN.md  README_PT.md  SETUP_REAL_DATA.md
grafana/dashboards/: cost-by-principal.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: prometheus.yml
migrations/versions/: 001_initial_schema.sql  002_milestone_b_enhancements.sql
prometheus/alerts/: portal-alerts.yml
scripts/: trigger_collection.py  validate_api.py
src/: __init__.py  main.py
src/api/: __init__.py  collect.py  costs.py  dimensions.py  health.py
src/collector/: __init__.py  billing_api.py  catalog_api.py  confluent_client.py  core_objects_api.py
src/common/: __init__.py  cache.py  config.py  logging.py
src/enricher/: __init__.py  allocation_rules.py  correlator.py  normalizer.py
src/exporter/: __init__.py  metrics.py
src/jobs/: __init__.py  collector_job.py  scheduler.py
src/storage/: __init__.py  database.py  models.py  repository.py
tests/: conftest.py
tests/integration/: __init__.py  test_metrics_export.py
tests/smoke/: __init__.py  test_service.py
tests/unit/: __init__.py  test_api_clients.py  test_api_costs.py  test_api_dimensions.py  test_api_health.py  test_normalizer.py
